이모지 문법 수정

--- a/src/main/resources/templates/game/race_room.html
+++ b/src/main/resources/templates/game/race_room.html
@@ -62,7 +62,7 @@
             <div class="car-name" th:text="${car}"></div>
             <div class="track">
                 <div class="finish-line"></div>
-                <div class="car" th:id="'car-' + ${car}" th:text="🏎️"></div>
+                <div class="car" th:id="'car-' + ${car}">🏎️</div>
             </div>
         </div>
     </div>
